--- a/css/game.css
+++ b/css/game.css
@@ -3,5 +3,46 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    
+}
+
+body{
     background: #CBDBDA;
 }
+
+
+.button, .reset_button {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 10vh;
+    width: 30vw;
+    background-color: #5C9B96;
+    border-radius: 12px;
+}
+
+.reset_button{
+    background: #87B4B0;
+}
+
+.verdugo{
+    z-index: 1;
+}
+
+.guillotina{
+    z-index: -1;
+}
+
+.verdugo, .guillotina{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+
+
+
+
+
+
