--- a/css/game.css
+++ b/css/game.css
@@ -30,6 +30,7 @@ body{
 
 
 .illustration{
+    position: relative;
     margin: 0 auto;
     height: 60vh;
     display: flex;
@@ -38,16 +39,13 @@ body{
 }
 
 #person{
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
+    font-weight: bold;
 }
 
 .coderText{
-    margin: 0 auto;
     display: flex;
     justify-content: center;
-    z-index: 2;
+    position: absolute;
 }
 
 
