--- a/css/endgame.css
+++ b/css/endgame.css
@@ -8,11 +8,9 @@
 .wrapper__endgame {
   width: 100vw;
   height: 100vh;
-  background-image: url(../img/verdugo.png);
+  background-image: url(../img/guillotina_endgame.png);
   background-repeat: no-repeat;
   background-color: #cbdbda;
-  background-position-x: left;
-  background-position-y: bottom;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -20,10 +18,20 @@
 }
 
 .box__endgame {
-  width: 40vw;
+  display:flex;
+  justify-content:center;
+  flex-direction:column;
+  width: 100vw;
   text-align: center;
   padding: 1vh 4vw;
   background-image: url(../img/bocadillo.png);
+  background-repeat: no-repeat;
+  background-position:center;
+  height: 20vh;
+  line-height: 0.5;
+}
+.lil_chickens {
+  font-weight: bold;
 }
 .button__endgame:hover {
   background-color: #385f5c;
