--- a/css/endgame.css
+++ b/css/endgame.css
@@ -38,3 +38,14 @@
   color: #fff;
   border: 2px solid #fff;
 }
+
+.button__endgame{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 10vh;
+    width: 30vw;
+    background-color: #5C9B96;
+    border-radius: 12px;
+}
