--- a/css/endgame.css
+++ b/css/endgame.css
@@ -8,7 +8,7 @@
 .wrapper__endgame {
   width: 100vw;
   height: 100vh;
-  background-image: url(../img/guillotina_endgame.png);
+  background-image: url(../img/verdugo.png);
   background-repeat: no-repeat;
   background-color: #cbdbda;
   background-size:contain;
